# my_toy_lang

./: .gitignore  Cargo.toml  README.md  debug.ll  jitstd.llvm  out.txt  test.ast  test_output.ll
.cargo/: config.toml
.github/workflows/: rust.yml
cli/: Cargo.toml  test.fb  test.foo
cli/src/: cli_args.rs  jitstd.rs  main.rs
compiler/: Cargo.toml
compiler/src/: ast.rs  code_gen.rs  inference.rs  lexer.rs  lib.rs  ops.rs  parser.rs  tokens.rs  typed_ast.rs  types.rs  util.rs
compiler/src/inference/: ast.rs
compiler/src/langstd/: ops.rs
compiler/test_sources/: basic.fb
langstd/: Cargo.toml
langstd/src/: lib.rs
llvm-codegen/: Cargo.toml
llvm-codegen/src/: code_gen.rs  lib.rs  ops.rs  type_resolver.rs
samples/: control_flow.fb  control_flow_match.fb  ffi.fb  multi_arg_fun.foo  simple_print_test.foo  test.fb  test.foo  unsafe.fb
src/: ast.rs  code_gen.rs  langstd.rs  lexer.rs  main.rs  parser.rs  tokens.rs  types.rs  util.rs
src/langstd/: ops.rs
stdsrc/: array.fb  box.fb  cmp.fb  ffi.fb  functionops.fb  ops.fb  option.fb  prelude.fb  result.fb  seq.fb  std.fb  str.fb  vec.fb
