[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compiler = {path = '../compiler' }
clap = { version = "4.1.4", features = ["derive"] }
llvm-codegen = {path = "../llvm-codegen"}
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }