[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

[features]
full = []
default = ["full"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# langstd = {path="langstd"} #this should eventually be linked in.  though will probably will write it in the lang itself and precompile it for use once I make c ffi functional.
itertools = "0.11.0"
utf8-chars = "3.0.0"
regex = "1.6.0"
lazy_static = "1.4.0"
bimap = "0.6.3"
thiserror = "1.0.57"
